# py-webcoos-client

./: .flake8  .gitignore  Dockerfile  LICENSE.txt  README.md  demo.ipynb  environment.yml  pyproject.toml  setup.py
pywebcoos/: API.py  timezones.py
test/: test_main.py
